--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,11 +1,14 @@
 <h1><%=@list.name%></h1>
 
-
-<%=@list.bookmarks%>
-
 <ul>
   <% @list.bookmarks.each do |bookmark| %>
-  <li> <%= bookmark.comment %> </li>
+  <li>
+  <%= bookmark.comment %>
+  <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure"}%>
+  </li>
   <% end %>
 </ul>
-<% console %>
+
+<%= link_to "Add a new bookmark", new_list_bookmark_path(@list) %>
+<br>
+<%= link_to "Back to full list", lists_path %>
