--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,14 +1,18 @@
-<h1><%=@list.name%></h1>
+<div class="container">
 
-<ul>
-  <% @list.bookmarks.each do |bookmark| %>
-  <li>
-  <%= bookmark.comment %>
-  <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure"}%>
-  </li>
-  <% end %>
-</ul>
+  <h1><%=@list.name%></h1>
 
-<%= link_to "Add a new bookmark", new_list_bookmark_path(@list) %>
-<br>
-<%= link_to "Back to full list", lists_path %>
+  <ul>
+    <% @list.bookmarks.each do |bookmark| %>
+    <li>
+    <strong><%= Movie.find(bookmark.movie_id)[:title] %> </strong><br>
+    <%= bookmark.comment %> <br>
+    <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure"}%>
+    </li>
+    <% end %>
+  </ul>
+
+  <%= link_to "Add a new bookmark", new_list_bookmark_path(@list) %>
+  <br>
+  <%= link_to "Back to full list", lists_path %>
+</div>
