--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,7 +6,6 @@
   <ul>
     <% @lists.each do |list|%>
       <div class="card-product" >
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
         <div class="card-product-infos">
           <%= list.name %>
           <p><small><%= link_to "See bookmarks", list_path(list) %></small></p>
@@ -19,9 +18,9 @@
   <%= link_to "Create new list", new_list_path %>
 </div>
 
-<%= cl_image_tag("qnw0di8pfpqgowkrgvf2",
+<%= cl_image_tag("qnw0di8pfpqgowkrgvf2", :cloud_name => cloudinary,
       width: 400, height: 300, crop: :fill) %>
 
 <!-- for face detection -->
-<%= cl_image_tag("bjbf3uswp2dy65s9lip1",
+<%= cl_image_tag("bjbf3uswp2dy65s9lip1", :cloud_name => cloudinary,
       width: 150, height: 150, crop: :thumb, gravity: :face) %>
