--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,6 +3,7 @@
   <%= form_with model: @list do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %>
+    <%= f.input :photos, as: :file, input_html: { multiple: true} %>
     <%= f.submit %>
   <% end %>
 </div>
