--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -18,9 +18,9 @@
   <%= link_to "Create new list", new_list_path %>
 </div>
 
-<%= cl_image_tag("qnw0di8pfpqgowkrgvf2", :cloud_name => cloudinary,
+<%= cl_image_tag("qnw0di8pfpqgowkrgvf2", :cloud_name => cloudinary_url,
       width: 400, height: 300, crop: :fill) %>
 
 <!-- for face detection -->
-<%= cl_image_tag("bjbf3uswp2dy65s9lip1", :cloud_name => cloudinary,
+<%= cl_image_tag("bjbf3uswp2dy65s9lip1", :cloud_name => cloudinary_url,
       width: 150, height: 150, crop: :thumb, gravity: :face) %>
