Show image on bookmarks

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,7 +3,7 @@
   <%= simple_form_for @list do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %>
-    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit %>
   <% end %>
 </div>
